--- a/Acceleration experiments/AmplificationTest6.ipynb
+++ b/Acceleration experiments/AmplificationTest6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Initial state for the star and clique, mutant in the leaf\n",
     "in_numbers=np.array([[0.,1000.],[10.,990.],[0.,1000.],[0.,1000.],[0.,1000.]]).astype(np.int64)\n",
     "K=1000\n",
-    "nb_cycles=9000\n",
+    "nb_cycles=10000\n",
     "folder=None\n",
     "\n",
     "#Migration matrix of the star\n",
@@ -194,24 +194,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fixation probability on 10000 simulations is 0.0003, with \n",
-      " average extinction time 43.197259177753324 with std 382.6723445721275 and std error 3.8272975834223457 and \n",
-      " average fixation time 11250.333333333334 with std 0.0 and std error 0.0\n"
+      "Fixation probability on 500000 simulations is 0.000564, with \n",
+      " average extinction time 39.48171768877647 with std 321.5418363746456 and std error 0.4548571136685595 and \n",
+      " average fixation time 9108.833333333334 with std 0.0 and std error 0.0\n"
      ]
     }
    ],
    "source": [
-    "nb_sim=10000\n",
+    "nb_sim=500000\n",
     "in_numbers=np.array([[10.,990.],[0.,1000.],[0.,1000.],[0.,1000.],[0.,1000.]]).astype(np.int64)\n",
-    "folder='Test6-K1000/Star/Center'\n",
-    "star_center_et, star_center_ft, star_center_fp, star_center_estd, star_center_fstd, star_center_estde, star_center_fstse, fix_times_star_center, ex_times_star_center = fixation_probability_stat(in_numbers, folder, migration_matrix, fitnesses, nb_sim, nb_cycles, t, K, size_follow_numbers=9000, print_frequency=1, save_dynamics=True)\n",
+    "#folder='Test6-K1000/Star/Center'\n",
+    "star_center_et, star_center_ft, star_center_fp, star_center_estd, star_center_fstd, star_center_estde, star_center_fstse, fix_times_star_center, ex_times_star_center = fixation_probability_stat(in_numbers, folder, migration_matrix, fitnesses, nb_sim, nb_cycles, t, K, size_follow_numbers=10000, print_frequency=1, save_dynamics=False)\n",
     "print(f'Fixation probability on {nb_sim} simulations is {star_center_fp}, with \\n average extinction time {star_center_et} with std {star_center_estd} and std error {star_center_estde} and \\n average fixation time {star_center_ft} with std {star_center_fstd} and std error {star_center_fstse}')"
    ]
   },
@@ -224,15 +224,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fixation probability on 100000 simulations is 0.00198, with \n",
+      " average extinction time 120.71893348830685 with std 592.046395494862 and std error 1.8740713401823876 and \n",
+      " average fixation time 9626.540404040405 with std 0.0 and std error 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "migration_matrix=define_clique(N_demes,m)\n",
     "in_numbers=np.array([[0.,1000.],[10.,990.],[0.,1000.],[0.,1000.],[0.,1000.]]).astype(np.int64)\n",
-    "nb_sim=1000000\n",
-    "folder='Test6-K1000/Clique'\n",
-    "cl_et, cl_ft, cl_fp, cl_estd, cl_fstd, cl_estde, cl_fstse,cl_fix_times, cl_ex_times = fixation_probability_stat(in_numbers, folder, migration_matrix, fitnesses, nb_sim, nb_cycles, t, K, size_follow_numbers=9000, print_frequency=1, save_dynamics=True)\n",
+    "nb_sim=100000\n",
+    "#folder='Test6-K1000/Clique'\n",
+    "cl_et, cl_ft, cl_fp, cl_estd, cl_fstd, cl_estde, cl_fstse,cl_fix_times, cl_ex_times = fixation_probability_stat(in_numbers, folder, migration_matrix, fitnesses, nb_sim, nb_cycles, t, K, size_follow_numbers=10000, print_frequency=1, save_dynamics=False)\n",
+    "print(f'Fixation probability on {nb_sim} simulations is {cl_fp}, with \\n average extinction time {cl_et} with std {cl_estd} and std error {cl_estde} and \\n average fixation time {cl_ft} with std {cl_fstd} and std error {cl_fstse}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fixation probability on 200000 simulations is 0.00193, with \n",
+      " average extinction time 121.56009097558288 with std 629.492136184317 and std error 1.4089474988034278 and \n",
+      " average fixation time 9872.546632124353 with std 0.0 and std error 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "migration_matrix=define_clique(N_demes,m)\n",
+    "in_numbers=np.array([[0.,1000.],[10.,990.],[0.,1000.],[0.,1000.],[0.,1000.]]).astype(np.int64)\n",
+    "nb_sim=200000\n",
+    "#folder='Test6-K1000/Clique'\n",
+    "cl_et, cl_ft, cl_fp, cl_estd, cl_fstd, cl_estde, cl_fstse,cl_fix_times, cl_ex_times = fixation_probability_stat(in_numbers, folder, migration_matrix, fitnesses, nb_sim, nb_cycles, t, K, size_follow_numbers=11000, print_frequency=1, save_dynamics=False)\n",
     "print(f'Fixation probability on {nb_sim} simulations is {cl_fp}, with \\n average extinction time {cl_et} with std {cl_estd} and std error {cl_estde} and \\n average fixation time {cl_ft} with std {cl_fstd} and std error {cl_fstse}')"
    ]
   },
@@ -245,11 +279,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder='Test6-K1000/Wm'\n",
+    "#folder='Test6-K1000/Wm'\n",
     "\n",
     "#Migration matrix of the clique\n",
     "migration_matrix=np.array([[1]])\n",
@@ -258,14 +292,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fixation probability on 200000 simulations is 0.00187, with \n",
+      " average extinction time 123.1375321851863 with std 625.7915361938011 and std error 1.4006226096161054 and \n",
+      " average fixation time 9857.157754010695 with std 0.0 and std error 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "#Fixation probability \n",
     "K=5000\n",
-    "wm_et, wm_ft, wm_fp, wm_estd, wm_fstd, wm_estde, wm_fstse, wm_fix_times, wm_ex_times = fixation_probability_stat(in_numbers, folder, migration_matrix, fitnesses, nb_sim, nb_cycles, t, K, size_follow_numbers=9000, print_frequency=1, save_dynamics=True)\n",
+    "nb_sim=200000\n",
+    "wm_et, wm_ft, wm_fp, wm_estd, wm_fstd, wm_estde, wm_fstse, wm_fix_times, wm_ex_times = fixation_probability_stat(in_numbers, folder, migration_matrix, fitnesses, nb_sim, nb_cycles, t, K, size_follow_numbers=11000, print_frequency=1, save_dynamics=False)\n",
     "print(f'Fixation probability on {nb_sim} simulations is {wm_fp}, with \\n average extinction time {wm_et} with std {wm_estd} and std error {wm_estde} and \\n average fixation time {wm_ft} with std {wm_fstd} and std error {wm_fstse}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fixation probability on 1000 simulations is 0.001, with \n",
+      " average extinction time 144.9029029029029 with std 777.1928021738556 and std error 24.589292080820176 and \n",
+      " average fixation time 11969.0 with std 0.0 and std error 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Fixation probability \n",
+    "K=5000\n",
+    "nb_sim=1000\n",
+    "wm_et, wm_ft, wm_fp, wm_estd, wm_fstd, wm_estde, wm_fstse, wm_fix_times, wm_ex_times = fixation_probability_stat(in_numbers, folder, migration_matrix, fitnesses, nb_sim, nb_cycles, t, K, size_follow_numbers=30000, print_frequency=1, save_dynamics=False)\n",
+    "print(f'Fixation probability on {nb_sim} simulations is {wm_fp}, with \\n average extinction time {wm_et} with std {wm_estd} and std error {wm_estde} and \\n average fixation time {wm_ft} with std {wm_fstd} and std error {wm_fstse}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# $10^7$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#Parameters unchanged during the notebook\n",
+    "m=0.4\n",
+    "mO=m/2\n",
+    "mI=4*mO\n",
+    "t=np.log(100)\n",
+    "s = 0.01/t\n",
+    "fitnesses=np.array([1+s,1])\n",
+    "N_demes=5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Initial state for the star and clique, mutant in the leaf\n",
+    "in_numbers=np.array([[0.,1e7],[1e7,0.],[0.,1e7],[0.,1e7],[0.,1e7]]).astype(np.int64)\n",
+    "K=1e7\n",
+    "nb_cycles=10000\n",
+    "folder=None\n",
+    "\n",
+    "#Migration matrix of the star\n",
+    "migration_matrix=define_star(N_demes,mI,mO, equal_contribution=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fixation probability on 1 simulations is 1.0, with \n",
+      " average extinction time 0 with std 0 and std error 0 and \n",
+      " average fixation time 1543.0 with std 0.0 and std error 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Fixation probability \n",
+    "nb_sim=1\n",
+    "star_et, star_ft, star_fp, star_estd, star_fstd, star_estde, star_fstse, fix_times, ex_times = fixation_probability_stat(in_numbers, folder, migration_matrix, fitnesses, nb_sim, nb_cycles, t, K, size_follow_numbers=10000, print_frequency=1, save_dynamics=False)\n",
+    "print(f'Fixation probability on {nb_sim} simulations is {star_fp}, with \\n average extinction time {star_et} with std {star_estd} and std error {star_estde} and \\n average fixation time {star_ft} with std {star_fstd} and std error {star_fstse}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plots"
    ]
   },
   {
